plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '2.0.4'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

mainClassName = 'vazkii.cmpdl.CMPDL'

repositories {
    jcenter()
}

dependencies {
    compile 'com.google.code.gson:gson:2.8.5'
    compile 'net.lingala.zip4j:zip4j:1.3.2'
}
